--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 			</div> <!-- cd-tab-filter -->
 		</div> <!-- cd-tab-filter-wrapper -->
         <!--   Content to Show/Hide     -->
-		<section class="cd-gallery">
-			<ul>
+		<section id="cd-gallery" class="cd-gallery">
+			<ul class="gallery">
             <li class=" mix ba bfa major minor 100 ginelle winter spring">
                 <h2>Drawing for Communication (5)</h2>
                 <h4>DESN 100</h4>
